fixed creative writing truncation, working on tag search

--- a/CKSite/adventure/css/blog-style.css
+++ b/CKSite/adventure/css/blog-style.css
@@ -29,6 +29,10 @@ body {
     list-style: none;
 }
 
+.side-well ul{
+    list-style: none;
+}
+
 .banner{
     height:auto;
     width:100%;
